<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <LinearLayout
            android:id="@+id/dotaBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:contentDescription="@string/item_name"
                app:srcCompat="@drawable/rubick" />

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/price"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/rare"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/itemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/price"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/itemRare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/rare"
                    android:textColor="@color/white"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14dp" />

            </LinearLayout>


        </LinearLayout>



    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>